Complete - task : Dynamic navigation

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -6,7 +6,7 @@
 	lang="id">
 <head>
 	<meta charset="utf-8" />
-	<title><span wicket:id="pageTitle"/> | Optimized UI for Node.js</title>
+	<title><span wicket:id="pageTitle"/> | <span wicket:id="siteTitle"/></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="description" content="Soluvas Starter Web Application" />
 	<meta name="author" content="Soluvas" />
@@ -39,13 +39,10 @@
 		href="/static/images/ico/apple-touch-icon-72-precomposed.png" />
 	<link rel="apple-touch-icon-precomposed" href="/static/images/ico/apple-touch-icon-57-precomposed.png" />
 
-	<link rel="stylesheet" href="/static/jquery-ui/css/ui-lightness/jquery-ui-1.8.20.custom.css"/>
-	<link rel="stylesheet" href="/static/jquery-notify/ui.notify.css"/>
-
-	<!-- Pass server-side variables to client-side script -->
+	<!-- TODO: Pass server-side variables to client-side script (Backbone) -->
 	<script type="text/javascript">
-	var baseUri = '/oui/';
-	var apiUri = baseUri + 'api/';
+	//var baseUri = '/oui/';
+	//var apiUri = baseUri + 'api/';
 	</script>
 
 </head>
