--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -67,17 +67,11 @@
 	<div class="container">
 		<div class="row">
 			<div class="span3">
-				<div class="well sidebar-nav">
-
-					<ul class="nav nav-list">
-						<li class="nav-header">Categories</li>
-					<div>
-						<li><a href="#">Apparel</a></li>
-					</div>
-					</ul>
-
+				
+				<div wicket:id="sidebarBlocks">
+					<div wicket:id="block">[sidebarBlocks]</div>
 				</div>
-				<!--/.well -->
+			
 			</div>
 			<!--/span-->
 
