Complete - task : Move Sidebar Items to Bootstrap Sidebar

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -72,8 +72,7 @@
 					<div wicket:id="block">[sidebarBlocks]</div>
 				</div>
 			
-			</div>
-			<!--/span-->
+			</div><!--/span-->
 
 			<div class="span9">
 				<wicket:child>
