--- a/nav.ui/src/main/resources/org/soluvas/web/nav/ui/SidebarNav.html
+++ b/nav.ui/src/main/resources/org/soluvas/web/nav/ui/SidebarNav.html
@@ -8,9 +8,9 @@
 <div class="well sidebar-nav">
 
 	<ul class="nav nav-list">
-		<li class="nav-header">Categories</li>
-		<div>
-			<li><a href="#">Apparel</a></li>
+		<li class="nav-header" wicket:id="menuLabel">Categories</li>
+		<div wicket:id="menuItems">
+			<li><a wicket:id="label">Menu item</a></li>
 		</div>
 	</ul>
 
