Complete - task : Menu item glyphs

--- a/nav.ui/src/main/resources/org/soluvas/web/nav/ui/SidebarNav.html
+++ b/nav.ui/src/main/resources/org/soluvas/web/nav/ui/SidebarNav.html
@@ -10,7 +10,7 @@
 	<ul class="nav nav-list">
 		<li class="nav-header" wicket:id="menuLabel">Categories</li>
 		<div wicket:id="menuItems">
-			<li><a wicket:id="label">Menu item</a></li>
+			<li><i class="icon-play" wicket:id="glyph"></i> <a wicket:id="label">Menu item</a></li>
 		</div>
 	</ul>
 
