Complete - task : Footer

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -86,7 +86,7 @@
 			<!--/row-->
 		</div>
 		<hr />
-		<footer><small style="color: #808080;"><span wicket:id="footer"/> &middot; &copy; <a href="http://www.soluvas.com/">Soluvas</a> 2012</small></footer>
+		<footer wicket:id="footer"><small style="color: #808080;"> &middot; &copy; <a href="http://www.soluvas.com/">Soluvas</a> 2012</small></footer>
 	</div>
 
 	<!--/.fluid-container-->
