Complete - task : Navbar menu items

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/Header.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/Header.html
@@ -2,16 +2,8 @@
 <body>
 <wicket:panel>
 
-<div class="nav-collapse">
-
-	<ul class="nav">
-		<li><a href="#">Hello</a></li>
-	</ul>
-
-	<p class="navbar-text pull-right">
-		<a href="#">Login</a>
-	</p>
-
+<div class="nav-collapse collapse" wicket:id="navbar">
+	[navbar]
 </div><!--/.nav-collapse -->
 
 </wicket:panel>
