--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -31,13 +31,13 @@
     <![endif]-->
 
 	<!-- Le fav and touch icons -->
-	<link rel="shortcut icon" href="/oui/favicon.ico" />
+	<link rel="shortcut icon" href="/favicon.ico" />
 
-	<link rel="apple-touch-icon-precomposed" sizes="114x114"
-		href="/static/images/ico/apple-touch-icon-114-precomposed.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="72x72"
-		href="/static/images/ico/apple-touch-icon-72-precomposed.png" />
-	<link rel="apple-touch-icon-precomposed" href="/static/images/ico/apple-touch-icon-57-precomposed.png" />
+<!-- 	<link rel="apple-touch-icon-precomposed" sizes="114x114" -->
+<!-- 		href="/static/images/ico/apple-touch-icon-114-precomposed.png" /> -->
+<!-- 	<link rel="apple-touch-icon-precomposed" sizes="72x72" -->
+<!-- 		href="/static/images/ico/apple-touch-icon-72-precomposed.png" /> -->
+<!-- 	<link rel="apple-touch-icon-precomposed" href="/static/images/ico/apple-touch-icon-57-precomposed.png" /> -->
 
 	<!-- TODO: Pass server-side variables to client-side script (Backbone) -->
 	<script type="text/javascript">
@@ -55,7 +55,7 @@
 				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span
 					class="icon-bar"></span> <span class="icon-bar"></span></a>
 
-				<a class="brand" href="/oui/" wicket:id="homeLink">Fashion Store</a>
+				<a class="brand" href="/" wicket:id="homeLink">Fashion Store</a>
 
 				<!--<a class="brand" href="#">Berbatik</a>-->
 				<div wicket:id="header"/>
