Complete - task : jQuery UI Notify support

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -97,6 +97,9 @@
 	<div wicket:id="footerJavaScripts">
 		<script type="text/javascript" src="something.js" wicket:id="js"></script>
 	</div>
+	<div wicket:id="footerJavaScriptSources">
+		<script type="text/javascript" wicket:id="js"></script>
+	</div>
 	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-transition.js"></script>
 	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-alert.js"></script>
 	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-modal.js"></script>
