Incomplete - task : Menus change client-side dynamically using Stomp

--- a/nav.ui/src/main/resources/org/soluvas/web/nav/ui/NavBar.html
+++ b/nav.ui/src/main/resources/org/soluvas/web/nav/ui/NavBar.html
@@ -4,8 +4,8 @@
 
 <div class="nav-collapse collapse">
 
-	<ul class="nav" wicket:id="nav">
-		<li><a href="#" wicket:id="link"><i class="icon-ok" wicket:id="icon"></i> 
+	<ul class="nav">
+		<li wicket:id="nav"><a href="#" wicket:id="link"><i class="icon-ok" wicket:id="icon"></i> 
 			<span wicket:id="label">Home</span></a></li><!-- TODO: set class="active" if active -->
 	</ul>
 
