ObjectMapper and Backbone support

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -113,5 +113,12 @@
 	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-carousel.js"></script>
 	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-typeahead.js"></script>
 
+	<div wicket:id="pageJavaScripts">
+		<script type="text/javascript" src="something.js" wicket:id="js"></script>
+	</div>
+	<div wicket:id="pageJavaScriptSources">
+		<script type="text/javascript" wicket:id="js"></script>
+	</div>
+
 </body>
 </html>
