--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -88,8 +88,10 @@
 		<hr />
 		<footer wicket:id="footer"><small style="color: #808080;"> &middot; &copy; <a href="http://www.soluvas.com/">Soluvas</a> 2012</small></footer>
 	</div><!--/.fluid-container-->
-	
-	<script data-main="/static/salesorder/js/salesorder.list.page.js" src="/static/bootstrap/js/require-2.0.5.js"></script>
+
+	<script src="/cxf/require"></script>
+	<script src="/static/bootstrap/js/require-2.0.5.js"></script>
+	<script src="/static/salesorder/js/salesorder.list.page.js"></script>
 
 	<div wicket:id="beforeFooterJsBlocks">
 		<div wicket:id="block">[beforeFooterJsBlocks]</div>
