Dynamic Require.JS config.

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -104,20 +104,8 @@
 	<div wicket:id="footerJavaScriptSources">
 		<script type="text/javascript" wicket:id="js"></script>
 	</div>
-	<!-- 
-	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-transition.js"></script>
-	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-alert.js"></script>
-	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-modal.js"></script>
-	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-dropdown.js"></script>
-	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-scrollspy.js"></script>
-	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-tab.js"></script>
-	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-tooltip.js"></script>
-	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-popover.js"></script>
-	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-button.js"></script>
-	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-collapse.js"></script>
-	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-carousel.js"></script>
-	<script type="text/javascript" src="/static/bootstrap/js/bootstrap-typeahead.js"></script>
-	-->
+	
+	<script>require(['bootstrap-collapse']);</script>
 
 	<div wicket:id="pageJavaScripts">
 		<script type="text/javascript" src="something.js" wicket:id="js"></script>
