--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -105,7 +105,7 @@
 		<script type="text/javascript" wicket:id="js"></script>
 	</div>
 	
-	<script>require(['bootstrap-collapse']);</script>
+	<script>require(['bootstrap-collapse', 'bootstrap-transition']);</script>
 
 	<div wicket:id="pageJavaScripts">
 		<script type="text/javascript" src="something.js" wicket:id="js"></script>
