--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -48,20 +48,8 @@
 </head>
 
 <body>
-	<div class="navbar navbar-fixed-top">
-		<div class="navbar-inner">
-			<div class="container">
-
-				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span
-					class="icon-bar"></span> <span class="icon-bar"></span></a>
-
-				<a class="brand" href="/" wicket:id="homeLink">Fashion Store</a>
-
-				<!--<a class="brand" href="#">Berbatik</a>-->
-				<div wicket:id="header"/>
-
-			</div>
-		</div>
+	<div class="navbar navbar-fixed-top" wicket:id="navbar">
+		Navbar... (see Navbar.html)
 	</div>
 
 	<div class="container">
@@ -71,9 +59,9 @@
 				<div wicket:id="sidebarBlocks">
 					<div wicket:id="block">[sidebarBlocks]</div>
 				</div>
-			
+				
 			</div><!--/span-->
-
+			
 			<div class="span9">
 				<wicket:child>
 					<ol class="featured-products">
