--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/Header.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/Header.html
@@ -2,9 +2,7 @@
 <body>
 <wicket:panel>
 
-<div class="nav-collapse collapse" wicket:id="navbar">
-	[navbar]
-</div><!--/.nav-collapse -->
+<!-- TODO: header... See http://twitter.github.com/bootstrap/components.html for example -->
 
 </wicket:panel>
 </body>
