--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -48,9 +48,11 @@
 </head>
 
 <body>
-	<div class="navbar navbar-fixed-top" wicket:id="navbar">
+	<div class="navbar navbar-inverse navbar-fixed-top" wicket:id="navbar">
 		Navbar... (see Navbar.html)
 	</div>
+	
+	<header wicket:id="header"></header>
 
 	<div class="container">
 		<div class="row">
