--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/Navbar.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/Navbar.html
@@ -8,7 +8,7 @@
 				<a class="brand" href="/" wicket:id="homeLink">Fashion Store</a>
 
 				<!--<a class="brand" href="#">Berbatik</a>-->
-				<div wicket:id="header"/>
+				<div wicket:id="navbarChild"></div>
 
 			</div>
 		</div>
