--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -24,6 +24,7 @@
       }
     </style>	
 	<link href="/static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
+	<link href="/static/bootstrap/css/bootstrap-patches.css" rel="stylesheet" />
 
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
