--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -32,7 +32,7 @@
     <![endif]-->
 
 	<!-- Le fav and touch icons -->
-	<link rel="shortcut icon" href="/favicon.ico" />
+	<link wicket:id="faviconLink" rel="shortcut icon" href="/favicon.ico" />
 
 <!-- 	<link rel="apple-touch-icon-precomposed" sizes="114x114" -->
 <!-- 		href="/static/images/ico/apple-touch-icon-114-precomposed.png" /> -->
@@ -95,7 +95,7 @@
 		<script type="text/javascript" wicket:id="js"></script>
 	</div>
 	
-	<script>require(['bootstrap-collapse', 'bootstrap-transition']);</script>
+	<script>require(['bootstrap/bootstrap-collapse', 'bootstrap/bootstrap-transition']);</script>
 
 	<div wicket:id="pageJavaScripts">
 		<script type="text/javascript" src="something.js" wicket:id="js"></script>
