Fixed #2. Complete - task : FeedbackPanel standard

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -71,6 +71,7 @@
 			</div><!--/span-->
 			
 			<div class="span9">
+				<div wicket:id="feedback" class="feedback"></div>
 				<wicket:child>
 					<ol class="featured-products">
 						<div id="featuredProducts">
@@ -82,7 +83,9 @@
 			<!--/row-->
 		</div>
 		<hr />
-		<footer wicket:id="footer"><small style="color: #808080;"> &middot; &copy; <a href="http://www.soluvas.com/">Soluvas</a> 2012</small></footer>
+		<footer wicket:id="footer">
+			<small style="color: #808080;"> &middot; &copy; <a href="http://www.soluvas.com/">Soluvas</a> 2012</small>
+		</footer>
 	</div><!--/.fluid-container-->
 
 	<div wicket:id="beforeFooterJsBlocks">
