Incomplete - task : Feedback Panel jQuery UI Notify #3

--- a/jquerynotify/src/main/resources/org/soluvas/web/jquerynotify/NotifyPanel.html
+++ b/jquerynotify/src/main/resources/org/soluvas/web/jquerynotify/NotifyPanel.html
@@ -16,5 +16,11 @@
     </div>
 </div>
 
+<script type="text/javascript">
+require(['jquery', 'jquery.notify'], function(jQuery, jquery_notify) {
+	jQuery('#notify-container').notify();
+});
+</script>
+
 </wicket:panel>
 </html>
