Fixed #3. Incomplete - task : Feedback Panel jQuery UI Notify #3

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -88,8 +88,10 @@
 		</footer>
 	</div><!--/.fluid-container-->
 
-	<div wicket:id="beforeFooterJsBlocks">
-		<div wicket:id="block">[beforeFooterJsBlocks]</div>
+	<div wicket:id="beforeFooterJs">
+		<div wicket:id="beforeFooterJsBlocks">
+			<div wicket:id="block">[beforeFooterJsBlocks]</div>
+		</div>
 	</div>
  	
 	<!-- Placed at the end of the document so the pages load faster -->
