--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -67,6 +67,7 @@
 				<div wicket:id="sidebarBlocks">
 					<div wicket:id="block">[sidebarBlocks]</div>
 				</div>
+				<div wicket:id="sidebarAdditional"></div>
 				
 			</div><!--/span-->
 			
