Refs #723, #730, #731. Summary: 1. Bug fixing for new Product. 2. Banner.

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -59,15 +59,19 @@
 	</div>
 	
 	<header wicket:id="header"></header>
+	
+	<div wicket:id="carouselImages" class="carouselImages">
+		Carousel Images is loading..
+	</div>
 
 	<div class="container">
 		<div class="row">
 			<div class="span3">
 				
+				<div wicket:id="sidebarAdditional"></div>
 				<div wicket:id="sidebarBlocks">
 					<div wicket:id="block">[sidebarBlocks]</div>
 				</div>
-				<div wicket:id="sidebarAdditional"></div>
 				
 			</div><!--/span-->
 			
