Refs #723, #730, #731. Summary: 1. Bug fixing..

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -61,7 +61,7 @@
 	<header wicket:id="header"></header>
 	
 	<div wicket:id="carouselImages" class="carouselImages">
-		Carousel Images is loading..
+<!-- 		Carousel Images is loading.. -->
 	</div>
 
 	<div class="container">
