--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -59,12 +59,11 @@
 	</div>
 	
 	<header wicket:id="header"></header>
+	<div class="container">
 	
-	<div wicket:id="carouselImages" class="carouselImages">
+	<div wicket:id="afterHeader" class="afterHeader">
 <!-- 		Carousel Images is loading.. -->
 	</div>
-
-	<div class="container">
 		<div class="row">
 			<div class="span3">
 				
