requireConfig.js is now in proper API path.
NEW - task 930: JAX-RS Resource Multitenant Service @TenantService
annotation support 
http://mahameru.unfuddle.com/projects/1/tickets/by_number/930

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -48,7 +48,7 @@
 	</script>
 
 	<!-- Make it possible to rapid develop hybrid Wicket components without precompiling Backbone JS sources / Mustache templates -->
-	<script src="/cxf/require"></script>
+	<script src="requireConfig" wicket:id="requireConfig"></script>
 	<script src="/static/bootstrap/js/require-2.0.5.js"></script>
 
 </head>
