--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -14,7 +14,7 @@
 
 	<!-- Le styles -->
 
-	<link href="/static/bootstrap/css/bootstrap.css" rel="stylesheet" />
+	<link href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap.css" rel="stylesheet" />
 	<style type="text/css">
       body {
         padding-top: 60px;
@@ -24,8 +24,8 @@
         padding: 9px 0;
       }
     </style>	
-	<link href="/static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
-	<link href="/static/bootstrap/css/bootstrap-patches.css" rel="stylesheet" />
+	<link href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
+	<link href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap-patches.css" rel="stylesheet" />
 
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
@@ -49,7 +49,7 @@
 
 	<!-- Make it possible to rapid develop hybrid Wicket components without precompiling Backbone JS sources / Mustache templates -->
 	<script src="requireConfig" wicket:id="requireConfig"></script>
-	<script src="/static/bootstrap/js/require-2.0.5.js"></script>
+	<script src="/static/js/org.soluvas.web.bootstrap/require-2.0.5.js"></script>
 
 </head>
 
