--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -17,7 +17,7 @@
 	<link href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap.css" rel="stylesheet" />
 	<style type="text/css">
       body {
-        padding-top: 60px;
+/*         padding-top: 60px; */
         padding-bottom: 40px;
       }
       .sidebar-nav {
@@ -54,12 +54,14 @@
 </head>
 
 <body>
-	<div class="navbar navbar-fixed-top" wicket:id="navbar">
-		Navbar... (see Navbar.html)
-	</div>
+	
 	
 	<header wicket:id="header"></header>
 	<div class="container container-margin-top">
+	
+	<div class="navbar" wicket:id="navbar">
+		Navbar... (see Navbar.html)
+	</div>
 	
 	<div wicket:id="afterHeader" class="afterHeader">
 <!-- 		Carousel Images is loading.. -->
