--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -57,7 +57,7 @@
 	
 	
 	<header wicket:id="header"></header>
-	<div class="container container-margin-top">
+	<div class="container">
 	
 	<div class="navbar" wicket:id="navbar">
 		Navbar... (see Navbar.html)
