NEW - task 928: Login / Authentication system using Apache Shiro http://mahameru.unfuddle.com/projects/1/tickets/by_number/928

--- a/nav.ui/src/main/resources/org/soluvas/web/nav/ui/NavMenu.html
+++ b/nav.ui/src/main/resources/org/soluvas/web/nav/ui/NavMenu.html
@@ -10,7 +10,8 @@
 	</ul>
 
 	<p class="navbar-text pull-right">
-		<a href="#">Login</a>
+		<a href="#" wicket:id="loginLink">Login</a>
+		<a href="#" wicket:id="logoutLink">Logout</a>
 	</p>
 
 </div><!--/.nav-collapse -->
