--- a/login/src/main/resources/org/soluvas/web/login/LoginPage.html
+++ b/login/src/main/resources/org/soluvas/web/login/LoginPage.html
@@ -6,7 +6,7 @@
 
 <wicket:extend>
 
-	<h1>Login to Bippo Commerce</h1>
+	<h1>Login to <span wicket:id="appName">Bippo Commerce</span></h1>
 	
 	<form wicket:id="loginForm">
 		<p>You are currently identified as: <span wicket:id="currentUser">[you]</span></p>
