--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -59,7 +59,7 @@
 	<!-- 		Carousel Images is loading.. -->
 		</div>
 			<div class="row">
-				<div class="span2 well sidebar-categories" wicket:id="sidebarColumn">
+				<div class="span3 sidebar-categories" wicket:id="sidebarColumn">
 					<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 				</div><!--/span-->
 				
