--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8" />
 	<title><span wicket:id="pageTitle"/> <span wicket:id="pageTitleSuffix"/></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="description" content="Soluvas Starter Web Application" />
+	<meta wicket:id="metaDescription" name="description" content="Soluvas Starter Web Application" />
 	<meta name="author" content="Soluvas" />
 
 	<!-- Le styles -->
