--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -45,6 +45,11 @@
 	<script src="requireConfig" wicket:id="requireConfig"></script>
 	<script wicket:id="requireJs" src="/static/js/org.soluvas.web.bootstrap/require-2.1.2.js"></script>
 
+<script>
+// TODO: refactor push support (both XHR or StompWeb-powered) to separate AMD module
+var subscriptions = [];
+</script>
+
 </head>
 
 <body>
