--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -83,8 +83,7 @@ var subscriptions = [];
 					</wicket:child>
 				</div>
 			</div><!--/row-->
-			<hr />
-			<footer wicket:id="footer">
+			<footer class="footer" wicket:id="footer">
 				<small style="color: #808080;"> &middot; &copy; <a href="http://www.soluvas.com/">Soluvas</a> 2012</small>
 			</footer>
 	</div><!--/.fluid-container-->
