--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -63,10 +63,20 @@ var subscriptions = [];
 		<div class="navbar" wicket:id="navbar">
 			Navbar... (see Navbar.html)
 		</div>
-		
-		<div wicket:id="afterHeader" class="afterHeader">
-	<!-- 		Carousel Images is loading.. -->
-		</div>
+<!-- 		    <ul class="breadcrumb"> -->
+<!-- 			    <li><a href="#">Home</a> <span class="divider">/</span></li> -->
+<!-- 			    <li><a href="#">Library</a> <span class="divider">/</span></li> -->
+<!-- 			    <li class="active">Data</li> -->
+<!-- 		    </ul> -->
+			<div class="row">		
+				<div class="span12">
+					<div class="row">
+						<div wicket:id="afterHeader" class="afterHeader">
+							<!-- 		Carousel Images is loading.. -->
+						</div>
+					</div>
+				</div>
+			</div>
 			<div class="row">
 				<div class="span3 sidebar-categories" wicket:id="sidebarColumn">
 					<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
