--- a/jquerynotify/src/main/resources/org/soluvas/web/jquerynotify/NotifyPanel.html
+++ b/jquerynotify/src/main/resources/org/soluvas/web/jquerynotify/NotifyPanel.html
@@ -12,7 +12,7 @@
     -->
     <div id="basic-template">
         <a class="ui-notify-cross ui-notify-close" href="#">x</a>
-        <p>#{text}</p>
+        <p>#{icon} #{text}</p>
     </div>
 </div>
 
