Refs #393, #501. Summary: 1. Still bug for notify. 2. public interface OnSelectedImage extends Serializable.

--- a/jquerynotify/src/main/resources/org/soluvas/web/jquerynotify/NotifyPanel.html
+++ b/jquerynotify/src/main/resources/org/soluvas/web/jquerynotify/NotifyPanel.html
@@ -12,7 +12,7 @@
     -->
     <div id="basic-template">
         <a class="ui-notify-cross ui-notify-close" href="#">x</a>
-        <p>#{icon} #{text}</p>
+        <p><img id="icon" src="#"/> #{text}</p>
     </div>
 </div>
 
