Refs #393. Summary: 1. Use parameter.

--- a/jquerynotify/src/main/resources/org/soluvas/web/jquerynotify/NotifyPanel.html
+++ b/jquerynotify/src/main/resources/org/soluvas/web/jquerynotify/NotifyPanel.html
@@ -11,8 +11,8 @@
     index 0 and "advanced-template" is index 1.
     -->
     <div id="basic-template">
-        <a class="ui-notify-cross ui-notify-close" href="#">x</a>
-        <p><img id="icon" src="#"/> #{text}</p>
+        <a class="ui-notify-cross ui-notify-close" href="#">×</a>
+        <p><img id="icon" src="#{pathIcon}"/>&nbsp; #{text}</p>
     </div>
 </div>
 
