--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -59,10 +59,11 @@ var subscriptions = [];
 <body>
 
 	<header wicket:id="header"></header>
-	<div class="container">
-		<div class="navbar" wicket:id="navbar">
+	<div class="" wicket:id="navbar">
 			Navbar... (see Navbar.html)
-		</div>
+	</div>
+	<div class="clearfix"></div>
+	<div class="container">
 <!-- 		    <ul class="breadcrumb"> -->
 <!-- 			    <li><a href="#">Home</a> <span class="divider">/</span></li> -->
 <!-- 			    <li><a href="#">Library</a> <span class="divider">/</span></li> -->
