--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage_fluid.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage_fluid.html
@@ -63,30 +63,30 @@ var subscriptions = [];
 			Navbar... (see Navbar.html)
 	</div>
 	<div class="clearfix"></div>
-	<div class="container" style="position: relative; top: 80px;">
+	<div class="container-fluid" style="position: relative; top: 80px;">
 <!-- 		    <ul class="breadcrumb"> -->
 <!-- 			    <li><a href="#">Home</a> <span class="divider">/</span></li> -->
 <!-- 			    <li><a href="#">Library</a> <span class="divider">/</span></li> -->
 <!-- 			    <li class="active">Data</li> -->
 <!-- 		    </ul> -->
-			<div class="row">
-				<div class="span3 sidebar-categories" wicket:id="sidebarColumn">
-					<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
-				</div><!--/span-->
+			<div class="row-fluid">
+<!-- 				<div class="span3 sidebar-categories" wicket:id="sidebarColumn"> -->
+<!-- 					<div wicket:id="sidebarBlocks">[sidebarBlocks]</div> -->
+<!-- 				</div>/span -->
 				
-				<div class="span9" wicket:id="contentColumn">
-					<div wicket:id="afterHeader" class="afterHeader">
-							<!-- 		Carousel Images is loading.. -->
-					</div>
-					<div wicket:id="feedback" class="feedback"></div>
-					<wicket:child>
-						<ol class="featured-products">
-							<div id="featuredProducts">
-								<li><a href="#">Product name</a></li>
-							</div>
-						</ol>
-					</wicket:child>
-				</div>
+<!-- 				<div class="span9" wicket:id="contentColumn"> -->
+<!-- 					<div wicket:id="afterHeader" class="afterHeader"> -->
+<!-- 									Carousel Images is loading.. -->
+<!-- 					</div> -->
+<!-- 					<div wicket:id="feedback" class="feedback"></div> -->
+<!-- 					<wicket:child> -->
+<!-- 						<ol class="featured-products"> -->
+<!-- 							<div id="featuredProducts"> -->
+<!-- 								<li><a href="#">Product name</a></li> -->
+<!-- 							</div> -->
+<!-- 						</ol> -->
+<!-- 					</wicket:child> -->
+<!-- 				</div> -->
 			</div><!--/row-->
 			<hr>
 			<footer class="footer" wicket:id="footer">
