StyleConfiguration for Mall and js wicket style

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage_fluid.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage_fluid.html
@@ -63,17 +63,17 @@ var subscriptions = [];
 			Navbar... (see Navbar.html)
 	</div>
 	<div class="clearfix"></div>
-		<div class="container-fluid" style="position: relative; top: 80px;">
+		<div class="container-fluid" style="position: relative; top: 70px;">
 <!-- 		    <ul class="breadcrumb"> -->
 <!-- 			    <li><a href="#">Home</a> <span class="divider">/</span></li> -->
 <!-- 			    <li><a href="#">Library</a> <span class="divider">/</span></li> -->
 <!-- 			    <li class="active">Data</li> -->
 <!-- 		    </ul> -->
 			<div class="row-fluid">
-				<div class="span3 sidebar-categories" wicket:id="sidebarColumn">
+				<div class="sidebar-categories" wicket:id="sidebarColumn">
 					<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 				</div>
-				<div class="span9" wicket:id="contentColumn">
+				<div wicket:id="contentColumn">
 					<div wicket:id="afterHeader" class="afterHeader">
 									Carousel Images is loading..
 					</div>
@@ -93,7 +93,6 @@ var subscriptions = [];
 			</footer>
 	</div><!--/.fluid-container-->
 
-INI FLUID
 
 	<div wicket:id="beforeFooterJs">[beforeFooterJs]</div>
  	
