--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage_fluid.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage_fluid.html
@@ -70,10 +70,10 @@ var subscriptions = [];
 <!-- 			    <li class="active">Data</li> -->
 <!-- 		    </ul> -->
 			<div class="row-fluid">
-				<div class="sidebar-categories" wicket:id="sidebarColumn">
+				<div class="span3 sidebar-categories" wicket:id="sidebarColumn">
 					<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 				</div>
-				<div wicket:id="contentColumn">
+				<div class="span9" wicket:id="contentColumn">
 					<div wicket:id="afterHeader" class="afterHeader">
 									Carousel Images is loading..
 					</div>
