AlexaCertify on every page

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -105,5 +105,7 @@ var subscriptions = [];
 	<script type="text/javascript" src="something.js" wicket:id="pageJavaScriptLinks"></script>
 	<script wicket:id="pageJavaScriptSources" type="text/javascript"></script>
 
+	<script wicket:id="alexaCertifyScript">[AlexaCertifyScript]</script>
+
 </body>
 </html>
