--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -124,5 +124,7 @@ var subscriptions = [];
 	<script type="text/javascript" src="something.js" wicket:id="pageJavaScriptLinks"></script>
 	<script wicket:id="pageJavaScriptSources" type="text/javascript"></script>
 
+	<script wicket:id="alexaCertifyScript">[AlexaCertifyScript]</script>
+
 </body>
 </html>
