styling navbar cintalama

--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BackendPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BackendPage.html
@@ -59,7 +59,7 @@ var subscriptions = [];
 <body>
 
 	<header wicket:id="header"></header>
-	<div class="" wicket:id="navbar">
+	<div class="BackendNavbar" wicket:id="navbar">
 			Navbar... (see Navbar.html)
 	</div>
 	<div class="clearfix"></div>
