--- a/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BackendPage.html
+++ b/bootstrap/src/main/resources/org/soluvas/web/bootstrap/BackendPage.html
@@ -48,7 +48,7 @@
 	<!-- Make it possible to rapid develop hybrid Wicket components without precompiling Backbone JS sources / Mustache templates -->
 	<script src="requireConfig" wicket:id="requireConfig"></script>
 	<script wicket:id="requireJs" src="/static/js/org.soluvas.web.bootstrap/require-2.1.4.js"></script>
-	<script>define('jquery',[],jQuery);</script>
+	<script>define('jquery',[],function(){return jQuery});</script>
 
 <script>
 // TODO: refactor push support (both XHR or StompWeb-powered) to separate AMD module
